--- a/Cybelle PS2 Tool/export_presets.cfg
+++ b/Cybelle PS2 Tool/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../../Desktop/Interlude/Fushigi no Umi no Nadia PS2 Extractor.exe"
+export_path="../../../../Desktop/Interlude/Cybelle PS2 Toolexe.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
