--- a/Tenshou Gakuen Gekkouroku Extractor/export_presets.cfg
+++ b/Tenshou Gakuen Gekkouroku Extractor/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../../Desktop/Fushigi no Umi no Nadia PS2/Fushigi no Umi no Nadia PS2 Extractor.exe"
+export_path="../../../../Desktop/Tenshou/Tenshou Gakuen Gekkouroku PS2 Extractor.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
